--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Validating a form and testing the validator functions",
   "main": "index.js",
   "scripts": {
+    "test": "jest --verbose",
     "start": "webpack-dev-server --mode development --entry ./js/index.js --output-filename ./dist/bundled.js",
     "build": "webpack --mode production",
     "dev": "webpack --mode development"
@@ -29,10 +30,14 @@
     "@babel/preset-env": "^7.3.1",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
+    "jest": "^25.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
   },
-  "dependencies": {}
+  "dependencies": {
+    "puppeteer": "^2.1.1",
+    "puppeteer-core": "^2.1.1"
+  }
 }
